crates/vize_atelier_vapor/src/tests_source_map/snapshots/vize_atelier_vapor__tests_source_map__transition__transition_nested_conditional_native_code.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map/transition.rs
expression: native
---
import { createComponent as _createComponent, extend as _extend, child as _child, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, createInvoker as _createInvoker, delegateEvents as _delegateEvents, VaporTransition as _VaporTransition, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div><button> </button></div>")
const t1 = _template("<main><!----><i>tail</i></main>", true)
_delegateEvents("click")

export function render(_ctx) {
  const n1 = t1()
  const n2 = _child(n1)
  _setInsertionState(n1, n2)
  const n0 = _createComponent(_VaporTransition, {
    css: () => (false),
    onEnter: () => (_ctx.enter)
  }, {
    "default": _extend(() => {
      const n3 = _createIf(() => (_ctx.show), () => {
        const n5 = t0()
        const n6 = _child(n5)
        const x6 = _txt(n6)
        n6.$evtclick = _createInvoker(e => _ctx.send(e))
        _renderEffect(() => _setText(x6, _toDisplayString(_ctx.label)))
        return n5
      }, null, 129)
      return n3
    }, { _: 1 })
  }, false)
  return n1
}
