crates/vize_atelier_vapor/src/tests_source_map/snapshots/vize_atelier_vapor__tests_source_map__transition__transition_nested_conditional_retained_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map/transition.rs
expression: retained_segments
---
[
    "1:23 \"div><but\" -> \"div v-if\"",
    "1:28 \"button> \" -> \"button @\"",
    "2:23 \"main><!-\" -> \"main><Tr\"",
    "2:36 \"i>tail</\" -> \"i>tail</\"",
    "2:38 \"tail</i>\" -> \"tail</i>\"",
    "5:0 \"export f\" -> \"<main><T\"",
    "14:17 \"_createI\" -> \"<div v-i\"",
    "14:34 \"_ctx.sho\" -> \"show\\\"><b\" [show]",
    "18:43 \"_ctx.sen\" -> \"send\\\">{{\" [send]",
    "19:58 \"_ctx.lab\" -> \"label }}\" [label]",
]
